# fhe-db-search

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-bake.hcl  docker-compose.yml  rust-toolchain.toml
client/: .env  Cargo.toml
client/src/: config.rs  main.rs
database/: .env  Cargo.toml
database/migrations/2025-03-29-224156_create_kv/: up.sql
database/src/: models.rs  schema.rs
server/: .env  Cargo.toml
server/src/: config.rs  db.rs  main.rs  router.rs
