[workspace]
members = [
    "client", 
    "database", 
    "server"
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85.1"
repository = "https://github.com/jessepinkman9900/fhe-db-search"
license-file = "LICENSE"
keywords = ["fhe", "db", "search", "azure"]

[workspace.dependencies]
# fhe
tfhe = { version = "~1.0.1", features = ["integer"] }

# env
envy = "0.4.2"
dotenvy = "0.15"

# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
    
# async
futures-util = "0.3"
tokio = { version = "1.44", features = ["full"] }
axum = "0.8.1"
tower = "0.5.2"
tower-http = { version = "0.5", features = ["request-id", "trace"] }

# logging
log = "0.4"
env_logger = "0.10"

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# misc
eyre = "0.6"

# hashicorp vault
vaultrs = "0.7.4"

# postgres
diesel = { version = "2.2.0", features = ["postgres", "r2d2"] }
r2d2 = "0.8.10"
