[package]
name = "client"
default-run = "client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
envy = { workspace = true }
eyre = { workspace = true }
vaultrs = { workspace = true }
tfhe = { workspace = true }
serde_json = { workspace = true }
