[package]
name = "server"
default-run = "server"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
envy = { workspace = true }
database  = {path = "../database"}
eyre = { workspace = true }
diesel = { workspace = true }
serde_json = "1.0"
r2d2 = { workspace = true }
