[package]
name = "server"
default-run = "server"
version.workspace = true
edition.workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
serde = { workspace = true }
envy = { workspace = true }
database  = {path = "../database"}
eyre = { workspace = true }
diesel = { workspace = true }
serde_json = { workspace = true }
r2d2 = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower = "0.5.2"
tower-http = { version = "0.5", features = ["request-id", "trace"] }
